--- a/onesoul_client/components/NavBar.module.css
+++ b/onesoul_client/components/NavBar.module.css
@@ -1,16 +1,12 @@
-import Link from "next/link";
-import {useRouter} from "next/router";
+.nav{
+    display: flex;
+    justify-content: space-between;
+    background-color: gray;
+}
 
-export default function NavBar(){
-    const router = useRouter();
-    return (
-    <nav>
-        <Link href="/">
-            <a style={{color: router.pathname === "/"?"red":"blue"}}>Home</a>
-        </Link>
-        <Link href="/about">
-            <a style={{color: router.pathname === "/about"?"red":"blue"}}>About</a>
-        </Link>
-    </nav>
-    );
+.link {
+    color:dodgerblue;
+}
+.on {
+    color:tomato;
 }
